your-spotify/network-policy-spotify-allow-ingress-from-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spotify-allow-ingress-from-traefik
  namespace: spotify
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 3000
        - protocol: TCP
          port: 8080
